<resources>
    <string name="app_name">Currency Converter</string>

    <string name="action_settings">Settings</string>
    <string name="convert_button_text">Convert</string>
    <string name="convert_to_textview_text">Convert To:</string>
    <string name="from_edittext_text">Enter Amount to Convert</string>
    <string name="convert_from_textview_text">Convert From:</string>
    <string name="title_textview_text">Currency Converter</string>

</resources>
