<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_textview_text"

        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="15dp"
        android:textColor="#ff28c020"
        android:textStyle="bold"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/convertFromTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/convert_from_textview_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="10dp" />

    <Spinner
        android:id="@+id/fromCurrencySpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/fromAmountEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:gravity="end"
        android:hint="@string/from_edittext_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/convert_to_textview_text"
        android:id="@+id/convertToTextView"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toCurrencySpinner"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_button_text"
        android:id="@+id/convertButton"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/toAmountTextView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textColor="#ff28c020"
        android:layout_marginBottom="20dp" />

    <ProgressBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center_horizontal|bottom"
        style="?android:attr/progressBarStyleHorizontal"
        />


</LinearLayout>
